assets/main.scss
/* ... */
.projectImg {
  border: 1px solid rgba(0,0,0,0.5);
  width: 100%;
  padding: 0;
}

.projectImgNarrow {
  border: 1px solid rgba(0,0,0,0.5);
  width: calc(100% - 2px);
  margin: 0;
  padding: 0;
}

.projectDesc {
  font-size: 12px;
  display: inline-block;
  white-space: nowrap;
  overflow: hidden;
  color: rgba(0, 0, 0, 0.7);;
  background-color: #F5F5F5;
  padding: 4px 8px 4px 8px;
  border-radius: 3px;
  margin-right: 12px;
}

/* 4. OTHER PAGES - About, Resume, Blog */
/* ----------------------------------------------------------- */
.resume {
  width: 95%;
  max-width: 900px;
  box-shadow: 1px 4px 10px rgba(0, 0, 0, 0.2);
  transition: all .3s ease-out;
}

.resume:hover {
  transform: translate(0, -3px);
  box-shadow: 1px 7px 15px 5px rgba(0, 0, 0, 0.3);
}

.blogtile {
  width: 100%;
  background-color: white;
  display: inline-block;
  margin-bottom: 20px;
  /* border-radius: 3px; */
  // box-shadow: 1px 4px 10px rgba(0, 0, 0, 0.2);
  // transition: all .3s ease-out;
  // border-radius: 5px;
  padding: 10px;
}

.tag {
  background-color: #E2EEF4;
  color: #147DB2;
  padding: 2px 8px 2px 8px;
  width: auto;
  display: inline-block;
  font-size: 14px;
  font-weight: 600;
  margin-right: 8px;
  margin-top: 16px;
  border-radius: 4px;
}

.tag img {
  height: 400px;
  width: auto;
}

/* CASE STUDIES - Projects, Next Project*/
/* ----------------------------------------------------------- */
.container {
  width: 100%;
  max-width: 1024px;
  margin-left: calc(50% - 512px);
  margin-right: calc(50% - 512px);
  margin-top: 0;
  margin-bottom: 0;
  overflow-y: auto;
  overflow-x: hidden;
  /* background-color: yellow; */
  height: 100%;
}

.feature {
  height: 500px;
  width: 100%;
  transition: all 0.3s ease-out;
  background-color: black;
  /* background-attachment: fixed; */
  background-position: right top;
  background-repeat: no-repeat;
  background-size: cover;
}

.featuretext {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  width: 100%;
  max-width: 900px;
  margin-left: calc(50% - 450px);
  margin-right: calc(50% - 450px);
  margin-top: 0;
  margin-bottom: 0;
}

.objectivetext {
  font-size: 28px;
  font-weight: 400;
  line-height: 36px;
}

.designImg {
  width: 96%;
  margin: 16px 2% 16px 2%;
  box-shadow: 2px 6px 30px 0px rgba(0, 0, 0, 0.3);
  /* border: 1px solid gray; */
}

.designcaption {
  text-align: center;
  font-size: 18px;
  margin-bottom: 0;
  margin-top: 4px;
}

.date {
  color: white;
  font-size: 18px;
  font-weight: 400;
  margin: 0 16px 16px 0;
  display: inline-block;
}

/* Previous and Next Projects */
/* ---------------------------------- */
.right {
  text-align: right;
}

.prevnext {
  font-size: 16px;
  font-family: "Montserrat", "Verdana", sans-serif;
  color: rgba(0, 0, 0, 0.6);
  font-weight: 300;
  vertical-align: middle;
  text-transform: uppercase;
}

.prevnextlink {
  font-size: 24px;
  font-family: "Montserrat", "Verdana", sans-serif;
  color: #147DB2;
  opacity: 0.8;
  vertical-align: middle;
}

.prevnextlink:hover {
  opacity: 0.6;
  /* text-shadow: 1px 3px 8px rgba(0, 0, 0, 0.2); */
}

/* FOOTER */
/* ----------------------------------------------------------- */
#footerBackground {
    position: relative;
    background-color: #147DB2;
    height: 140px;
    width: 100%;
    bottom: 0;
}

footer {
  position: relative;
  text-align: center;
}

.footerbox {
  position: absolute;
  text-align: center;
  top: 50%;
  transform: translateY(-50%);
  width: 600px;
  margin-left: calc(50% - 300px);
  margin-right: calc(50% - 300px);
}

#iconContainer {
    text-align: center;
    margin: 16px 20px 8px 0;
    width: calc(100% - 20px);
}

.iconsHeader{
    height: 32px;
    width: 32px;
    margin-left: 16px;
}

#copyright {
    color: white;
    margin-top: 0;
    padding-top: 2px;
    text-align: center;
    font-size: 14px;
    opacity: 0.9;
    font-family: "Assistant", "Verdana", sans-serif;
    font-weight: 300;
}

#backToTop {
    position: fixed;
    bottom: 20px;
    right: 20px;
    width: 50px;
    height: 50px;
    text-decoration: none;
    -webkit-transition: all 0.3s linear;
    -moz-transition: all 0.3s ease;
    -ms-transition: all 0.3s ease;
    -o-transition: all 0.3s ease;
    transition: all 0.3s ease;
    /* display: none; */
    opacity: 0;
}

#backToTop i {
  color: black;
  margin: 0;
  position: relative;
  display: block;
  font-size: 48px;
  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
  -webkit-transition: all 0.3s linear;
  -moz-transition: all 0.3s ease;
  -ms-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
  opacity: 0.8;
}

#backToTop:hover i {
    /* top: 12px; */
    transform: translate(0, -4px);
    opacity: 1;
}


/* TYPOGRAPHY */
/* ----------------------------------------------------------- */
h1 { /* titles */
  font-size: 40px;
  font-family: "Montserrat", "Verdana", sans-serif;
  font-weight: 800;
  color: white;
}

h2 { /* key insight */
  font-size: 36px;
  margin: 0 0 12px 0;
  font-family: "Assistant", "Verdana", sans-serif;
  font-weight: 600;
  /* color: #147DB2; */
  color: black;

}

.h2subheader {
  font-family: "Assistant", "Verdana", sans-serif;
  font-size: 24px;
  font-weight: 600;
}

.preheaderblue {
  font-size: 18px;
  font-weight: 600;
  font-family: "Montserrat", "Verdana", sans-serif;
  color: #147DB2;
  margin-bottom: 8px;
}

.preheaderlightL {
  font-family: "Montserrat", "Verdana", sans-serif;
  font-size: 18px;
  font-weight: 300;
  color: black;
  opacity: 0.7;
  margin: 0 0 24px 0;
  padding: 0;
  text-align: center;
  text-transform: uppercase;
}

.preheaderlightS {
  font-family: "Montserrat", "Verdana", sans-serif;
  font-size: 13px;
  font-weight: 300;
  color: black;
  opacity: 0.7;
  margin: 0;
  padding: 0;
  text-align: center;
}
/* ... */

